# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

## [3.3.12] - 2021-10-20

### Added

- Create this `CHANGELOG.md` file
- Deleted accounts will no longer appear in top's

### Changed

- Rewrite top command

### Fixed

- Replies properly when execute trisal without being on a trisal and without mentioning anyone