@@ -285,21 +285,20 @@
       "success-god": "you sold ** {{value}} ** <:God:758474639570894899> gods and received ** {{cost}} ** ⭐ star! \nNow you have ** {{quantity}} ** <:God:758474639570894899> and ** {{star}} ** ⭐ "
     }
   },
-  "carteira": {
-    "description": "See someone's wallet",
-    "usage": "[user]",
+  "inventario": {
     "no-dbuser": "this user is not in my database",
-    "title": "{{user}}'s Wallet",
+    "bot": "Honey, sorry to disappoint you, but bots don't have inventory :(",
+    "title": "{{user}}'s Inventory",
     "stars": "Stars",
     "rolls": "Rolls",
-    "unknow-user": "user not found",
+    "unknow-user": "User not found",
     "giants": "Giants",
     "archangel": "Archangels",
     "demons": "Demons",
     "angels": "Angels",
     "sd": "Demigods",
     "god": "Gods",
-    "banned-user": "This user doesn't have a wallet because they're banned from Menhera!"
+    "banned-user": "This user doesn't have an inventory because they're banned from Menhera!"
   },
   "8ball": {
     "description": "Ask me something",
